<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


<!--        <androidx.appcompat.widget.AppCompatImageView-->
<!--            android:id="@+id/appCompatImageView"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="100dp"-->
<!--            app:layout_constraintBottom_toTopOf="@+id/linearLayout"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:srcCompat="@drawable/main_logo_gray" />-->

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@id/create_account"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_user_mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="48dp"
                android:drawableStart="@drawable/ic_envelope"
                android:drawablePadding="16dp"
                android:hint="@string/user_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textSize="18sp" />


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_user_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:drawableStart="@drawable/ic_locked"
                android:drawablePadding="16dp"
                android:hint="@string/user_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="48dp"
                android:layout_marginTop="48dp"
                android:background="@drawable/btn_bg"
                android:minHeight="48dp"
                android:text="@string/btn_login"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/create_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:text="@string/create_account"
            android:textColor="#93A8AC"
            android:textColorLink="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
