<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        tools:context="">

        <LinearLayout
            android:id="@+id/main_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="4dp"
                app:cardCornerRadius="40dp">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/profile_avatar"
                    android:src="@drawable/ic_reading" />
            </com.google.android.material.card.MaterialCardView>


        <LinearLayout
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/customborder"
            android:backgroundTint="#eeeeee">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <TextView
                    android:textColor="#70adb5"
                    android:id="@+id/user_insta_placeholder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="100dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/hind_siliguri_bold"
                    android:gravity="center"
                    android:text="@string/user_insta"
                    android:textSize="18sp" />

                <TextView
                    android:textColor="#70adb5"
                    android:id="@+id/user_telega_placeholder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/hind_siliguri_bold"
                    android:gravity="center"
                    android:text="@string/user_telega"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/user_insta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="100dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/hind_siliguri_medium"
                    android:gravity="center"
                    android:textSize="16sp"
                    tools:text="@string/user_insta" />

                <TextView
                    android:id="@+id/user_telega"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/hind_siliguri_medium"
                    android:gravity="center"
                    android:textSize="16sp"
                    tools:text="@string/user_telega" />

            </LinearLayout>
        </LinearLayout>



            <!--            There should be direct links to social network-->
            <!--            <LinearLayout-->
            <!--                android:layout_marginTop="8dp"-->
            <!--                android:orientation="vertical"-->
            <!--                android:id="@+id/social"-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="wrap_content">-->

            <!--                <TextView-->
            <!--                    android:text="@string/instagram_placeholder"-->
            <!--                    android:layout_width="wrap_content"-->
            <!--                    android:layout_height="wrap_content"/>-->

            <!--                <TextView-->
            <!--                    android:text="@string/telegram_placeholder"-->
            <!--                    android:layout_width="wrap_content"-->
            <!--                    android:layout_height="wrap_content"/>-->
            <!--            </LinearLayout>-->

            <LinearLayout
                android:id="@+id/books_info_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/main_linear_layout">

                <TextView
                    android:id="@+id/my_books_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/hind_siliguri"
                    android:gravity="center"
                    android:text="@string/number_of_books" />

                <TextView
                    android:id="@+id/my_friends"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/hind_siliguri"
                    android:gravity="center"
                    android:text="@string/my_friends" />

            </LinearLayout>

            <View
                android:layout_width="300dp"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="@color/grey" />

            <Button
                android:id="@+id/bnt_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/settings"
                app:icon="@drawable/ic_outline_build_24"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                />

            <View
                android:layout_width="300dp"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="@color/grey" />
        </LinearLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/fragment_main_tab"
            style="@style/TabLayoutTextAppearance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_linear_layout"
            app:tabIndicatorFullWidth="false" />

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/fragment_books_view_pager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragment_main_tab" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

